# sql-testing

./: README.md  create_sample_prod_data.py  mask_prod_data.ipynb  pyproject.toml
data/sample-prod-data/: .part-00000-e9a1d50c-25ed-47b9-a040-f545ae27a874-c000.snappy.parquet.crc  part-00000-e9a1d50c-25ed-47b9-a040-f545ae27a874-c000.snappy.parquet
